Fixed Issue With Experence Title On mobile fixed issue with header where is wasnt positioned properly

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -25,6 +25,7 @@
 
 .contact_option {
 	width: 100%;
+	height: 100px;
 
 	padding-top: 20px;
 	padding-bottom: 20px;
